Eliminate static Operations wiring
Operations.op is a static field, from whence everybody is getting their
operations. This is not exactly nice, as it makes library not really a
library and it means tests are relying on changing a static final field
-- which is a huge no-no with Java 21.

This patch turns Operations into an interface, provided by
DefaultOperations. Everybody is then taught to get Operations injected,
eliminating the need for statics.

We also clean attempts to mock InetAddress, which is a sealed class now.

Change-Id: Ied3fbfe062f081f2ea9d8640d09513fabeab9268
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>
(cherry picked from commit 3197f6ff66dd9327f02489e1420e2eb14e9754fb)