@@ -114,15 +114,9 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
+          <!-- FIXME: remove this configuration -->
           <forkCount>1</forkCount>
           <reuseForks>false</reuseForks>
-
-          <!-- FIXME: remove this once we do not muck with static final fields -->
-          <argLine>
-            @{argLine}
-            --add-opens java.base/java.lang=ALL-UNNAMED
-            --add-opens java.base/java.lang.reflect=ALL-UNNAMED
-          </argLine>
         </configuration>
       </plugin>
       <plugin>
